loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:3: error: ';' expected but '=' found.
va ligne:Int=0
            ^