loopfor.LoopCourse.scala.code
var tour:Int=0
var cote:Int=0
va ligne:Int=0

for(tour <-0 to 9){
  for (cote <- 0 to 4){
    for (ligne <-0 to 7){
    avance()

    
	  }

  gauche()

  }
  
}